[package]
name = "mem-snoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = ["Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Foundation"]}
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Foundation"] }
